@@ -1,4 +1,9 @@
 ----- cvs ci ------
+Wed Nov  8 19:30:56 NOVT 2000
+max:
+* default password from linkdefaults can be changed (report from Ivan Prokudin)
+
+----- cvs ci ------
 Sun Oct 29 00:20:09 NOVST 2000
 max:
 * fixed packNetmail parsing
